--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      window.embeddedChatbotConfig = {
+      chatbotId: "_uz5QdJAeSo1r0Y7x7Ixd",
+      domain: "www.chatbase.co"
+      }
+      </script>
+      <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="_uz5QdJAeSo1r0Y7x7Ixd"
+      domain="www.chatbase.co"
+      defer>
+      </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
