--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
+  <base href="/" />
   <link rel="manifest" href="/assets/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chimfwembe kangwa</title>
@@ -14,7 +15,7 @@
 
 <body>
   <div id="root"></div>
-  <!-- <script>
+  <script>
       window.embeddedChatbotConfig = {
       chatbotId: "_uz5QdJAeSo1r0Y7x7Ixd",
       domain: "www.chatbase.co"
@@ -25,7 +26,7 @@
       chatbotId="_uz5QdJAeSo1r0Y7x7Ixd"
       domain="www.chatbase.co"
       defer>
-      </script> -->
+      </script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
