--- a/index.html
+++ b/index.html
@@ -1,21 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon-16x16.png"
+    />
+    <base href="/" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chimfwembe kangwa</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
-  <base href="/" />
-  <link rel="manifest" href="/assets/site.webmanifest" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chimfwembe kangwa</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script>
+  <body>
+    <div id="root"></div>
+    <script 
+  src="http://localhost:5173/chat-widget.js" 
+  data-key="your-api-key" 
+  data-id="your-widget-id" 
+  data-name="Your Bot Name" 
+  data-theme="light"
+  data-logo="https://example.com/logo.png"
+  async
+></script>
+    <!-- <script>
       window.embeddedChatbotConfig = {
       chatbotId: "_uz5QdJAeSo1r0Y7x7Ixd",
       domain: "www.chatbase.co"
@@ -26,8 +48,7 @@
       chatbotId="_uz5QdJAeSo1r0Y7x7Ixd"
       domain="www.chatbase.co"
       defer>
-      </script>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+      </script> -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
