Refactor styles across multiple components for consistency; update background gradients and border styles in App, Footer, GitHubCalendar, and FavouriteSection

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/apple-touch-icon.png"
+      href="/assets/crock-app-touch.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon-32x32.png"
+      href="/assets/favicon_32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon-16x16.png"
+      href="/assets/favicon_16x16.png"
     />
     <base href="/" />
     <link rel="manifest" href="/assets/site.webmanifest" />
@@ -28,7 +28,7 @@
 
   <body>
     <div id="root"></div>
-    <script 
+    <!-- <script 
   src="http://localhost:5173/chat-widget.js" 
   data-key="your-api-key" 
   data-id="your-widget-id" 
@@ -36,7 +36,7 @@
   data-theme="light"
   data-logo="https://example.com/logo.png"
   async
-></script>
+></script> -->
     <!-- <script>
       window.embeddedChatbotConfig = {
       chatbotId: "_uz5QdJAeSo1r0Y7x7Ixd",
