Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/crock-app-touch.png"
+      href="/assets/crock-suit.png"
     />
     <link
       rel="icon"
